fix(ui): prevent layout shift when opening dialog

--- a/src/app/assets/styles/globals.css
+++ b/src/app/assets/styles/globals.css
@@ -63,10 +63,12 @@
 
   html {
     scroll-behavior: smooth;
+    scrollbar-gutter: stable;
   }
 
   body {
     height: 100vh;
+    margin: 0 !important;
     background-color: var(--background-primary);
     color: var(--foreground-primary);
     font-family: var(--montserrat);
